<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".AppDetails">


        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="15dp"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <!-- Linear Layout for Application Name -->
                <LinearLayout
                    android:id="@+id/ll_appName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/box"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_applicationName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:text="@string/application_name" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="1dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="1dp"
                        android:layout_weight="1"
                        android:background="#D5D0D0" />

                    <TextView
                        android:id="@+id/tv_appName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:hint="@string/appli_name"
                        android:padding="10dp" />
                </LinearLayout>

                <!-- Linear Layout for Application Package Name -->
                <LinearLayout
                    android:id="@+id/ll_pkgeName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/box"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_pkgeName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:text="@string/packager_name" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="1dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="1dp"
                        android:layout_weight="1"
                        android:background="#D5D0D0" />

                    <TextView
                        android:id="@+id/tv_pkgName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:hint="@string/package_name"
                        android:padding="10dp" />
                </LinearLayout>

                <!-- Linear Layout for Application SHA value -->
                <LinearLayout
                    android:id="@+id/ll_shavalue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/box"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_shaName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:text="@string/sha_256_fingerprint" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="1dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="1dp"
                        android:layout_weight="1"
                        android:background="#D5D0D0" />

                    <TextView
                        android:id="@+id/tv_certfingerprint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:hint="@string/cert_sha256_value"
                        android:padding="10dp" />
                </LinearLayout>

                <!-- Linear Layout for Application Cert subject Details -->
                <LinearLayout
                    android:id="@+id/ll_subjectDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/box"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_subjectName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:text="@string/certificate_subject_2" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="1dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="1dp"
                        android:layout_weight="1"
                        android:background="#D5D0D0" />

                    <TextView
                        android:id="@+id/tv_certdetails"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:hint="@string/certificate_subject"
                        android:padding="10dp" />
                </LinearLayout>

                <!-- Linear Layout for Application Cert issuer Details -->
                <LinearLayout
                    android:id="@+id/ll_issuer_Details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/box"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_subjectissuer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:text="@string/certificate_issuer_1" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="1dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="1dp"
                        android:layout_weight="1"
                        android:background="#D5D0D0" />

                    <TextView
                        android:id="@+id/tv_certissuer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:hint="@string/certificate_issuer"
                        android:padding="10dp" />
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!--        <TextView-->
        <!--            android:id="@+id/tv_signingKey"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_margin="15dp"-->
        <!--            android:background="@drawable/box"-->
        <!--            android:hint="@string/singing_key"-->
        <!--            android:padding="16dp" />-->

        <!--<TextView
            android:id="@+id/tv_app_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/box"
            android:hint="@string/application_count"
            android:padding="16dp" />-->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:elevation="15dp"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:background="@drawable/box">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/application_permissions" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:background="#D5D0D0" />

                <TextView
                    android:id="@+id/tv_permissions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="15dp"
                    android:hint="@string/application_permissions"
                    android:layout_gravity="center_horizontal"
                    android:padding="16dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>
</ScrollView>